--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,11 +10,11 @@
 .wrapper {
   background-color: #f2f2f2;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .box {
@@ -73,22 +73,22 @@ h2 {
   background-position: right center;
 }
 
-/* -------------------------card----------------------- */
+/* -------------------------voting-page----------------------- */
 .voting-page {
-  /* //height media qurei */
   height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
 }
-
+/* -------------------------card----------------------- */
 .card-contanier {
   display: flex;
   gap: 10px;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding-top: 2rem;
 }
 
 .card {
@@ -96,24 +96,19 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* gap: 2rem; */
-  /* padding-top: 10rem; */
   background-color: white;
   border-radius: 15px;
   width: 18%;
   height: 450px;
   border: 1px solid white;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  /* border: 1px solid #333; */
   min-width: 340px;
 }
 
-/* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* Add some padding inside the card container */
 .container {
   padding: 2px 16px;
   text-align: center;
@@ -130,4 +125,23 @@ h2 {
 img {
   width: 100%;
   border-radius: 10px;
+}
+
+/* ------------------navbar-------------------------- */
+.navbar {
+  padding: 1rem;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.458);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.navbar span {
+  font-size: 1.2rem;
+  padding-left: 1rem;
+}
+
+.navbar .btn-logout {
+  padding: 10px 50px;
 }
